--- a/content/analysis3.Rmd
+++ b/content/analysis3.Rmd
@@ -72,5 +72,9 @@ head(top10, 16)
 
 The table shows the top 16 teams that have the winning index above 0.5, this also indicating the teams that would likely make it into 2017’s playoff.
 
+## Conclusion
+
+The actual championship for 2017 is GSW (Golden State Warriors), our predicted champion is SAS (San Antonio Spurs) while GSW has the second highest winning index. So our model did not accurately predict the championship but it does have certain reliability to make such predictions. Limitation includes that we cannot select all the variables in our dataset and try to fit them into the model due to the data source and the need to avoid overfitting and multicollinearity issues. Some variables are useful while some are duplicate, also few variables show an abnormal trend so it may not be a reliable input. The AIC method helped us to narrow down the predictor variables. But at the same time we cannot predict the impact of the other 30 variables on the model and how different combinations may affect our model prediction. In addition, we only focused on the most recent three year’s data. Compared with a player's career (average 11 years), it still lacks certain convincing. However, we have to take many factors into consideration including the change of court rules in recent years, change in team’s overall competence in the league, change in player styles and intensity of fouls getting called during the game. All these factors have made the recent player’s stats different compared with years before. So we chose the most recent three years in hope to make our model the newest data and make reliable predictions. Some improvements would include obtaining the newest dataset for nba player’s stats, using more advanced techniques to build our prediction model and being able to explore more combinations between each variable. Overall our project was able to analyze the relationship between nba stats variables and build a prediction model based on the dataset. Although the model did not accurately predict the true championship, it does accurately present these teams competence and those teams that have higher competence are indeed the popular team for the championship. No model is correct, some are useful, when coming to sports games, it is those uncertainties and unpredictability that makes every game exciting and attractive. Using what we have learned and making reasonable predictions based on the model, we can support our favorite teams and have even more confidence that they can win the championship.
+
 
 Here is the [fourth analysis page](/analysis4/).
